# simpl

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake/: common.cmake
include/: simpl.h
project/nmake-clang/: makefile
project/vs2017/: .gitignore
project/vs2017/simpl/: simpl-gtest.vcxproj  simpl-gtest.vcxproj.filters  simpl-test.vcxproj  simpl-test.vcxproj.filters  simpl.sln  simpl.vcxproj  simpl.vcxproj.filters
src/: simpl.c
unit-test/: simpl-gtest-main.cpp  simpl-test-main.c  simpl-unit-test-construction.c  simpl-unit-test-destruction.c  simpl-unit-test-drain.c  simpl-unit-test-memalign.c  simpl-unit-test-realloc.c  simpl-unit-test.h
